<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ib.booking.product</groupId>
	<artifactId>product</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Product</name>
	<description>Demo project for Spring Boot</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.2.6.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.7</java.version>
		<docker.image.prefix>justindav1s</docker.image.prefix>
		<maven.build.timestamp.format>yyMMdd-HHmmss</maven.build.timestamp.format>
		<container.listen.port>8080</container.listen.port>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-config</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-eureka</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-hystrix</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.ib.commercial</groupId>
			<artifactId>commercial-model</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-parent</artifactId>
				<version>Angel.SR3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jolokia</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.13.6</version>
				<configuration>
					<logStdout>true</logStdout>
					<verbose>true</verbose>
					<images>
						<image>
							<alias>${project.artifactId}_${maven.build.timestamp}</alias>
							<name>${docker.image.prefix}/${project.artifactId}</name>
							<build>
								<from>java:8</from>
								<tags>
									<tag>latest</tag>
								</tags>
								<ports>
									<port>${container.listen.port}</port>
								</ports>
								<maintainer>justinndavis@gmail.com</maintainer>
								<assembly>
									<descriptor>assembly.xml</descriptor>
								</assembly>
								<entryPoint>
									<shell>java -XX:PermSize=256m -Xmx768m -Djava.security.egd=file:/dev/./urandom -jar /maven/app/${project.build.finalName}.jar</shell>
								</entryPoint>
							</build>
							<run>
								<namingStrategy>alias</namingStrategy>
								<ports>
									<port>host.port:${container.listen.port}</port>
								</ports>
								<links>
									<link>config:config</link>
									<link>eureka:eureka</link>
								</links>
							</run>
						</image>
					</images>
				</configuration>
			</plugin>
		</plugins>
	</build>
	

</project>
